# swarm

./: .gitignore  CMakeLists.txt  GCS_node-red.json  GPS changer  Oversikt RPi.xlsx  Plot.py  README.md  my_map.html  package.xml
Autopilot/: 2json.py  ArduTest.py  Arduino_data.py  Ardunio_code.ino  Autopilot.py  Autopilot_call.py  Autopilot_callFunc.py  Autopilot_caller.py  Base.py  Communication.py  GPS_class.py  GPS_definition.py  PID.py  PID_plotter.py  Plotter_PID.py  Pygame.py  README.md  ROS_test.py  Ranger.py  STOP.py  Setup_simulator.py  Swarmpilot.py  Swarmpilot_caller.py  To_arduino.py  Vector_class.py  test.py  utklip
Autopilot/0. Regler og To Do/: Filstruktur  Les før arbeid.txt  Variabelnavn
Autopilot/Base_files/: Base.py  Run.py
Autopilot/Classes/: PID.py  (+6 more)
Behaviour/: BahaviourVelocity.py  Behaviour.py  Behaviour_caller.py  Boid.py  Global_data.py  Sim.py  Swarm_global.py  datalist.py  datalist_test.py  global_data.py  test.py
Communication/: Boat_RX.py  Boat_TX.py  Json.py  Listener.py  Msg_type.py  Publisher.py  Udp_Listener.py
GCS/: GCS_Json.py  GCS_RX.py  GCS_TX.py  Interpreter.py  Json.py  Swarm_list.py  Udp_GListener.py  Udp_Listener.py  gcs.py  gcstest.py  objects.py  recievetest.py
Unused files/: test.py
launch/: autopilot.launch  px4.launch  rosbag.launch  rx.launch  swarm_control.launch  system.launch  tx.launch
msg/: Area.msg  BoatData.msg  BoatOdometry.msg  BoatStatus.msg  FlightStatus.msg  Movement.msg  Route.msg  RuntimeData.msg  StateStatus.msg  SwarmCommand.msg  SwarmHeader.msg  SwarmOdometry.msg  SwarmStatus.msg  test.msg
(+48 files in other folders)
